package com.richardpianka.chess.network;

import "protobuf/google/csharp_options.proto";

option java_package = "com.richardpianka.chess.network";
option java_outer_classname = "Contracts";

option (google.protobuf.csharp_file_options).namespace = "Chess.Contracts";
option (google.protobuf.csharp_file_options).umbrella_classname = "Contracts";
option (google.protobuf.csharp_file_options).ignore_google_protobuf = true;

/**
 * The protocol version is defined in the Version message
 */

/**
 * =======================================
 * Transport layer
 * =======================================
 */
//The message type and name must be identical
message Envelope {
    optional HandshakeRequest HandshakeRequest = 1;
    optional HandshakeResponse HandshakeResponse = 2;
    optional IdentifyRequest IdentifyRequest = 3;
    optional IdentifyResponse IdentifyResponse = 4;
    optional JoinChatRequest JoinChatRequest = 5;
    optional JoinChatResponse JoinChatResponse = 6;
    optional JoinRoomRequest JoinRoomRequest = 7;
    optional JoinRoomResponse JoinRoomResponse = 8;
    optional SpeakRequest SpeakRequest = 9;
    optional ChatRoomEvent ChatRoomEvent = 10;
    optional ChatUserEvent ChatUserEvent = 11;
    optional ChatSpeakEvent ChatSpeakEvent = 12;
}

/**
 * =======================================
 * Common objects & enums
 * =======================================
 */
enum Result {
    Success = 0;
    Failure = 1;
}

enum RoomFlags {
    Public = 0;
    Private = 1;
    Restricted = 2;
}

enum UserFlags {
    Pedestrian = 0;
    Operator = 1;
    Admin = 2;
}

enum SpeakMode {
    Normal = 0;
    Whisper = 1;
    Emote = 2;
}

enum OperatorAction {
    Designate = 0;
    Resign = 1;
    Kick = 2;
    Ban = 3;
}

message Version {
    optional uint32 VersionMajor = 1    [default = 1];
    optional uint32 VersionMinor = 2    [default = 0];
    optional uint32 VersionRevision = 3 [default = 0];
}

message Room {
    required string Name = 1;
    required RoomFlags Flags = 2;
}

message Record {
    required uint32 Wins = 1;
    required uint32 Losses = 2;
    required uint32 Stalemates = 3;
    required uint32 Disconnects = 4;
}

message User {
    required string Name = 1;
    required UserFlags Flags = 2;
    required Record Record = 3;
}

message Game {
    required string Name = 1;
    required bool Private = 2;
    optional User Creator = 3;
    optional User Joiner = 4;
}

/**
 * =======================================
 * Login sequence
 * =======================================
 */
message HandshakeRequest {
    required Version Version = 1;
}

message HandshakeResponse {
    required Result Result = 1;
}

message IdentifyRequest {
    required string Username = 1;
    optional string Password = 2;
}

message IdentifyResponse {
    required Result Result = 1;
    optional string Message = 2;
}

message JoinChatRequest {
    // empty
}

message JoinChatResponse {
    required Result Result = 1;
}

/**
 * =======================================
 * Chat environment
 * =======================================
 */

/**
 * Commands
 */
message RoomListRequest {
    // empty
}

message RoomListResponse {
    repeated Room Rooms = 1;
}

message JoinRoomRequest {
    required Room Room = 1;
}

message JoinRoomResponse {
    required Result Result = 1;
}

message SpeakRequest {
    required SpeakMode Mode = 1;
    required string Message = 2;
    optional User Recipient = 3;
} // no response

message OperatorRequest {
    required OperatorAction Action = 1;
    optional User User = 2;
}

message OperatorResponse {
    required Result Result = 1;
}

/**
 * Events
 */
message ChatRoomEvent {
    required Room Room = 1;
    repeated User Users = 2;
}

message ChatUserEvent {
    enum UserStatus {
        Joined = 0;
        Left = 1;
        Update = 2;
    }

    required User User = 1;
    required UserStatus Status = 2;
    optional string Message = 3;
}

message ChatSpeakEvent {
    required User User = 1;
    required string Message = 2;
    required SpeakMode Mode = 3;
}

/**
 * =======================================
 * Game list
 * =======================================
 */
message GameListRequest {
    // empty
}

message GameListResponse {
    repeated Game Games = 1;
}

message CreateGameRequest {
    required string Name = 1;
    optional string Password = 2;
}

message CreateGameResponse {
    required Result Result = 1;
    optional Game Game = 2;
    optional string Message = 3;
}

message JoinGameRequest {
    required Game Game = 1;
    optional string Password = 2;
}

message JoinGameResponse {
    required Result Result = 1;
}